--- a/src/views/index.html
+++ b/src/views/index.html
@@ -8,8 +8,13 @@
     />
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+  
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   </head>
+<style>
+Body{
+background: #fff;
+</style>
   <body>
     <header>
       <h1>
